[[bin]]
name = "main"
path = "src/main.rs"

[package]
name = "oxy-wkd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "1.17.0", default-features = false,  features = ["rt-multi-thread", "macros"] }
lazy_static="1.3.0"

zbase32 = "0.1.2"
sha1 = "0.10.1"
sequoia-openpgp= {version ="1.8.0", default-features = false, features = ["crypto-rust","allow-experimental-crypto","allow-variable-time-crypto"]}
hashbrown = {version = "0.12" ,default-features = false, features = ["ahash"] }


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
